# codex-hook

./: .pre-commit-config.yaml  Cargo.toml  README.md
.agents/skills/testing-codex-hook/: SKILL.md
.github/workflows/: ci.yml  lint.yml  test.yml
src/: action.rs  action_tests.rs  cli_tests.rs  condition.rs  condition_tests.rs  config.rs  config_tests.rs  error.rs  event.rs  event_tests.rs  input.rs  input_tests.rs  lib.rs  main.rs  matcher.rs  matcher_tests.rs  template.rs  template_tests.rs
tests/: cli_test.rs  config_test.rs
