[package]
name = "codex-hook"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.61", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde-saphyr = { version = "0.0", features = ["deserialize"] }
jaq-core = "3.0"
jaq-json = "2.0"
jaq-std = "3.0"
regex = "1"
serde_json = "1"
thiserror = "2"
